# jmake

./: Cargo.toml  LICENSE  PARALLELISM_PLAN.md  README.md  UNSAFE_AUDIT.md  install.sh  mk_ep1.mk  mk_ep2.mk  mk_ep3.mk  mk_test11.mk  mk_test12.mk  mk_test13.mk  mk_test14.mk  mk_test15.mk  mk_test16.mk  mk_test17.mk  mk_test18.mk  mk_test19.mk  mk_test20.mk  mk_test3.mk  mk_test4.mk  mk_test8.mk  mk_test9.mk  runtests.sh  test-setup.sh
.forgejo/workflows/: build.yml  conformance.yml
benches/: functions_bench.rs
src/: cli.rs  database.rs  implicit_rules.rs  io_traits.rs  main.rs  signal_handler.rs  types.rs
src/eval/: env_config_mod.rs  expand.rs  mod.rs
src/exec/: mod.rs  parallel.rs
src/functions/: mod.rs
src/parser/: directives.rs  lexer.rs  mod.rs
tests/: double_expansion_regression.rs  feature_tests.rs  realworld_tests.rs  upstream_441_GAPS.md  upstream_441_extractor.pl  upstream_441_runner.sh
tests/feature/: autotools_shell_ne_recipe.golden  autotools_shell_ne_recipe.mk  bare_colon_conditional.golden  bare_colon_conditional.mk  double_colon.golden  double_colon.mk  eval_foreach.golden  eval_foreach.mk  extra.mk  include_variants.golden  include_variants.mk  make_flags_n.golden  make_flags_n.mk  make_k.golden  make_k.mk  make_r.golden  make_r.mk  order_only.golden  order_only.mk  patsubst_chain.golden  patsubst_chain.mk  pattern_specific_vars.golden  pattern_specific_vars.mk  phony_suffixes.golden  phony_suffixes.mk  recipe_modifier_after_expansion.mk  run.sh  security_alloc_bomb.golden  security_alloc_bomb.mk  security_escape_injection.golden  (+206 more)
(+2 files in other folders)
